# name-phonetics

./: .gitignore  Dockerfile  INTEGRATION.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  cli.py  cluster.py  dedup.py  eval.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
data/: gazetteer.json  nicknames.json  sample_names.txt  testcases.py
engine/: __init__.py  compare.py  distance.py  g2p.py
enrich/: __init__.py  classify.py  document.py  gazetteer.py  lexicons.py  nicknames.py  normalize.py  phonetic.py
es/: mapping.json  query.py
match/: __init__.py  blocking.py  rerank.py
scripts/: pull_names_from_es.sh
service/: app.py
tests/: test_engine.py  test_enrich_and_eval.py
